compiler-core/src/parse/snapshots/gleam_core__parse__tests__case_invalid_expression.snap
---
source: compiler-core/src/parse/tests.rs
assertion_line: 956
expression: "\nfn main() {\n    case 1, type {\n        _, _ -> 0\n    }\n}\n"
---
error: Syntax error
  ┌─ /src/parse/error.gleam:3:13
  │
3 │     case 1, type {
  │             ^^^^ I was not expecting this

Found the keyword `type`, expected one of: 
- `{`
- an expression
